--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -6,9 +6,11 @@ font="sans serif"
 
 [server]
 maxUploadSize = 1024
+#headless = true
 
 # Max size, in megabytes, of messages that can be sent via the WebSocket connection.
 # Default: 200
 maxMessageSize = 1024
 
 fileWatcherType = "none"
+
